--- a/app/styles/containers/glossary/_glossary-details.scss
+++ b/app/styles/containers/glossary/_glossary-details.scss
@@ -3,8 +3,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: 4rem 0;
+  color: $color-lightGray;
+  font-family: $font-family-open-sans-light;
+  font-size: $font-size-sm;
   @include lg {
+    margin: 2rem 0 4rem 0rem;
     padding: 0 14rem;
+    font-size: $font-size-lg;
   }
   .title-texts {
     font-family: $font-family-nunito-light;
@@ -15,12 +21,9 @@
       font-size: $font-size-xxx;
     }
   }
-  .p-text {
-    color: $color-lightGray;
-    font-family: $font-family-open-sans-light;
-    font-size: $font-size-sm;
-    @include lg {
-      font-size: $font-size-lg;
-    }
+  img {
+    display: block;
+    margin: 0 auto;
+    margin-top: 3rem;
   }
 }
